--- a/04_ETPs.ipynb
+++ b/04_ETPs.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,13 +33,14 @@
     "from polygon.rest import RESTClient\n",
     "from datetime import date\n",
     "from tickers import get_tickers\n",
+    "from times import first_trading_date_after_equal, last_trading_date_before_equal\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
     "POLYGON_DATA_PATH = \"../data/polygon/\"\n",
     "\n",
-    "START_DATE = date(2019, 6, 1)\n",
-    "END_DATE = date(2024, 3, 1)\n",
+    "START_DATE = first_trading_date_after_equal(date(2019, 6, 1))\n",
+    "END_DATE = last_trading_date_before_equal(date(2024, 4, 15))\n",
     "\n",
     "with open(POLYGON_DATA_PATH + \"secret.txt\") as f:\n",
     "    KEY = next(f).strip()\n",
@@ -56,11 +57,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "###\n",
     "size_ETFs = [\"SPY\", \"IJH\", \"IJR\"]\n",
     "bond_ETFs = [\"BIL\", \"SHY\", \"IEF\", \"TLT\", \"JPST\", \"VCSH\", \"VCIT\", \"VCLT\" ]\n",
     "sector_ETFs = [\"XLE\", \"XLU\", \"XLK\", \"XLB\", \"XLP\", \"XLY\", \"XLC\", \"XLV\", \"XLF\", \"XLRE\"]\n",
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -159,13 +159,12 @@
        "2       NaN  ETF  0001100663   BBG000BWC7P0  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "###\n",
     "ticker_list_ETF = client.list_tickers(type=\"ETF\", date=END_DATE.isoformat(), active=True, market='stocks', limit=1000)\n",
     "ticker_list_ETN = client.list_tickers(type=\"ETN\", date=END_DATE.isoformat(), active=True, market='stocks', limit=1000)\n",
     "ticker_list_ETV = client.list_tickers(type=\"ETV\", date=END_DATE.isoformat(), active=True, market='stocks', limit=1000)\n",
@@ -189,16 +188,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here we will in the blanks using the <code>get_tickers_events</code> function. We need the start date from the ticker, which may not always be equal to START_DATE. I assume no delistings."
+    "Here we fill in the blanks using the <code>get_tickers_events</code> function. We need the start date from the ticker, which may not always be equal to START_DATE. I assume no delistings."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "###\n",
     "for index, row in tickers_ETP.copy().iterrows():\n",
     "    if row[\"type\"] == \"ETF\" or row[\"type\"] == \"ETN\" or row[\"type\"] == \"ETV\":\n",
     "        try:\n",
@@ -222,11 +220,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "###\n",
     "tickers_ETP.loc[len(tickers_ETP)] = f'$VIX-{START_DATE.isoformat()}', '$VIX', 'VIX Index', True, START_DATE, END_DATE, 'INDEX', np.NaN, np.NaN"
    ]
   },
@@ -239,11 +236,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "###\n",
     "tickers_ETP.loc[tickers_ETP['ticker'] == 'VXX', \"start_date\"] = max(date(2009, 1, 29), START_DATE)\n",
     "tickers_ETP.loc[tickers_ETP['ticker'] == 'UVIX', \"start_date\"] = max(date(2022, 3, 30), START_DATE)"
    ]
@@ -257,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -294,7 +290,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>8614</th>\n",
+       "      <th>8628</th>\n",
        "      <td>GLD-2019-06-01</td>\n",
        "      <td>GLD</td>\n",
        "      <td>SPDR Gold Trust, SPDR Gold Shares</td>\n",
@@ -306,7 +302,7 @@
        "      <td>BBG000CRF6Q8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8615</th>\n",
+       "      <th>8629</th>\n",
        "      <td>SLV-2019-06-01</td>\n",
        "      <td>SLV</td>\n",
        "      <td>iShares Silver Trust</td>\n",
@@ -318,7 +314,7 @@
        "      <td>BBG000NDCRW7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8616</th>\n",
+       "      <th>8630</th>\n",
        "      <td>$VIX-2019-06-01</td>\n",
        "      <td>$VIX</td>\n",
        "      <td>VIX Index</td>\n",
@@ -335,23 +331,22 @@
       ],
       "text/plain": [
        "                   ID ticker                               name  active  \\\n",
-       "8614   GLD-2019-06-01    GLD  SPDR Gold Trust, SPDR Gold Shares    True   \n",
-       "8615   SLV-2019-06-01    SLV               iShares Silver Trust    True   \n",
-       "8616  $VIX-2019-06-01   $VIX                          VIX Index    True   \n",
+       "8628   GLD-2019-06-01    GLD  SPDR Gold Trust, SPDR Gold Shares    True   \n",
+       "8629   SLV-2019-06-01    SLV               iShares Silver Trust    True   \n",
+       "8630  $VIX-2019-06-01   $VIX                          VIX Index    True   \n",
        "\n",
        "      start_date    end_date   type         cik composite_figi  \n",
-       "8614  2019-06-01  2024-03-01    ETV  0001222333   BBG000CRF6Q8  \n",
-       "8615  2019-06-01  2024-03-01    ETV  0001330568   BBG000NDCRW7  \n",
-       "8616  2019-06-01  2024-03-01  INDEX         NaN            NaN  "
+       "8628  2019-06-01  2024-03-01    ETV  0001222333   BBG000CRF6Q8  \n",
+       "8629  2019-06-01  2024-03-01    ETV  0001330568   BBG000NDCRW7  \n",
+       "8630  2019-06-01  2024-03-01  INDEX         NaN            NaN  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "###\n",
     "# Merge tickers_v2 and ETFs to get tickers_v3\n",
     "tickers_v2 = get_tickers(v=2)\n",
     "tickers_v3 = pd.concat([tickers_v2, tickers_ETP])\n",
@@ -365,7 +360,19 @@
    "metadata": {},
    "source": [
     "# 4.2 Updates\n",
-    "Run everything."
+    "We simply copy/paste the ETPs from the old to the new ticker_v3."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "old_tickers_v3 = get_tickers(3)\n",
+    "ETPs = tickers_v3[tickers_v3['type'].isin(['ETF', 'ETV', 'ETN', 'INDEX'])]\n",
+    "ETPs.loc[:, 'end_date'] = END_DATE # I assume that no ETFs got delisted/renamed.\n",
+    "pd.concat([get_tickers(2), ETPs]).reset_index(drop=True).to_csv(\"../data/tickers_v3.csv\")"
    ]
   },
   {
