--- a/05_download_adjustments.ipynb
+++ b/05_download_adjustments.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,16 +33,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "POLYGON_DATA_PATH = \"../data/polygon/\"\n",
     "\n",
     "START_DATE = date(2019, 6, 1)\n",
-    "END_DATE = date(2024, 3, 1)\n",
+    "END_DATE = date(2024, 4, 15)\n",
     "\n",
-    "CLEAN_DOWNLOAD = True # If False, only update existing data to the END_DATE. If True, remove all files in adjustments/.\n",
+    "CLEAN_DOWNLOAD = False # If False, only update existing data to the END_DATE. If True, remove all files in adjustments/.\n",
     "\n",
     "with open(POLYGON_DATA_PATH + \"secret.txt\") as f:\n",
     "    KEY = next(f).strip()\n",
@@ -73,8 +73,7 @@
     "        \n",
     "for index, row in tickers_v3.iterrows():\n",
     "    ticker = row[\"ticker\"]\n",
-    "    start_date = max(row[\"start_date\"], START_DATE) # Trim to START_DATE if ticker existed for longer\n",
-    "    end_date = min(row[\"end_date\"], END_DATE) # Trim to END_DATE. But use end date of the ticker if delisted.\n",
+    "    end_date = row[\"end_date\"]\n",
     "\n",
     "    # Tickers that do not need downloading/updating. This happens when the ticker is delisted before START_DATE.\n",
     "    if end_date < START_DATE:\n",
@@ -82,8 +81,8 @@
     "\n",
     "    # Get data\n",
     "    try:\n",
-    "        splits = pd.DataFrame(client.list_splits(ticker=ticker, execution_date_gte=start_date, execution_date_lte=end_date))\n",
-    "        dividends = pd.DataFrame(client.list_dividends(ticker=ticker, ex_dividend_date_gte=start_date, ex_dividend_date_lte =end_date))\n",
+    "        splits = pd.DataFrame(client.list_splits(ticker=ticker, execution_date_gte=START_DATE, execution_date_lte=END_DATE))\n",
+    "        dividends = pd.DataFrame(client.list_dividends(ticker=ticker, ex_dividend_date_gte=START_DATE, ex_dividend_date_lte =END_DATE))\n",
     "    except Exception as e:\n",
     "        print(repr(e))\n",
     "        continue\n",
@@ -124,10 +123,22 @@
     "            parse_dates=True,\n",
     "        )\n",
     "        all_adjustments = pd.concat([old_adjustments, adjustments])\n",
+    "        all_adjustments['date'] = pd.to_datetime(all_adjustments['date']).dt.date\n",
+    "        all_adjustments = all_adjustments.sort_values(by='date').reset_index(drop=True)\n",
+    "\n",
+    "        # Sometimes the adjustments are duplicated for no reason.\n",
+    "        if not adjustments[adjustments['type'] == 'DIV'].empty:\n",
+    "            dividends = adjustments[adjustments['type'] == 'DIV']\n",
+    "            indices_to_remove = dividends[dividends[['date', 'type']].duplicated(keep='last')].index\n",
+    "            adjustments = adjustments.drop(index=indices_to_remove)\n",
+    "        if not adjustments[adjustments['type'] == 'SPLIT'].empty:\n",
+    "            splits = adjustments[adjustments['type'] == 'SPLIT']\n",
+    "            indices_to_remove = splits[splits[['date', 'type']].duplicated(keep='last')].index\n",
+    "            adjustments = adjustments.drop(index=indices_to_remove)\n",
+    "            \n",
     "        all_adjustments.to_csv(path, index=False)\n",
     "    else:\n",
     "        adjustments.to_csv(path, index=False)\n",
-    "    \n",
     "    print(index)\n",
     "\n",
     "# Set the END_DATE to end_date.txt\n",
@@ -144,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -181,12 +192,6 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2022-06-29</th>\n",
-       "      <td>DIV</td>\n",
-       "      <td>CD</td>\n",
-       "      <td>0.44</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>2022-09-29</th>\n",
        "      <td>DIV</td>\n",
        "      <td>CD</td>\n",
@@ -222,6 +227,12 @@
        "      <td>CD</td>\n",
        "      <td>0.35</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-03-27</th>\n",
+       "      <td>DIV</td>\n",
+       "      <td>CD</td>\n",
+       "      <td>0.35</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -229,16 +240,16 @@
       "text/plain": [
        "           type subtype  amount\n",
        "date                           \n",
-       "2022-06-29  DIV      CD    0.44\n",
        "2022-09-29  DIV      CD    0.44\n",
        "2022-12-29  DIV      CD    0.35\n",
        "2023-03-30  DIV      CD    0.35\n",
        "2023-06-29  DIV      CD    0.35\n",
        "2023-09-29  DIV      CD    0.35\n",
-       "2023-12-28  DIV      CD    0.35"
+       "2023-12-28  DIV      CD    0.35\n",
+       "2024-03-27  DIV      CD    0.35"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
