--- a/06_download_bars.ipynb
+++ b/06_download_bars.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,27 +114,36 @@
    "metadata": {},
    "source": [
     "# 6.2 Updates\n",
-    "Run the first cell to import the modules and then run the cells below. Making a backup of the <code>raw/m1</code> folder is recommended! If something goes wrong in this step, you cannot go back without downloading everything again. \n",
+    "Run the first cell to import the modules and then run the cells below. Making a backup of the <code>raw/m1</code> folder is recommended! If something goes wrong in this step, you cannot go back without downloading everything again. Reminder: the only difference between tickers_v3 and tickers_v4 is that tickers_v4 removes the ghost tickers and has start/end dates for the data.\n",
+    "\n",
+    "old_END_DATE is the date up to which we have data.\n",
     "\n",
     "Loop through tickers_v3:\n",
-    "- If the ID is in <code>tickers_v3_old</code> and <code>end_date</code> is larger than the old end date, then we can simply append the raw data.\n",
-    "- If the ID is not in <code>tickers_v3</code>, we need to create a new file.\n",
+    "- If the ID is in the (old) <code>tickers_v4</code> and <code>end_date</code>(v3) is larger than the old_END_DATE (v4), then we know this is a ticker that kept its listing. We can simply append the new data. This is true for most stocks.\n",
+    "- If the ID is not in <code>tickers_v4</code> AND start_date (v3) is larger than old_END_DATE, we need to create a new file. This is a new listing. If it is smaller than old_END_DATE this means the ticker had no data in the first place because in tickers_v4 the ghost tickers are already removed.\n",
     "\n",
     "All other tickers are those that have been delisted and need no updating."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "old_tickers_v3 = pd.read_csv(\"../data/tickers_v3_old.csv\", index_col = 0)\n",
-    "old_tickers_v3 = old_tickers_v3[old_tickers_v3[\"type\"].isin([\"CS\", \"ADRC\", \"ETF\", \"ETN\", \"ETV\"])]\n",
-    "old_tickers_v3.reset_index(inplace=True, drop=True)\n",
-    "old_tickers_v3['end_date'] = pd.to_datetime(old_tickers_v3['end_date']).dt.date\n",
-    "old_end_date = old_tickers_v3['end_date'].max()\n",
-    "old_IDs = list(old_tickers_v3['ID'])"
+    "tickers_v4 = get_tickers(v=4, types=[\"CS\", \"ADRC\", \"ETF\", \"ETN\", \"ETV\"])\n",
+    "tickers_v4.to_csv(\"../data/tickers_v4_OLD.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "old_tickers_v4 = get_tickers(v=4, types=[\"CS\", \"ADRC\", \"ETF\", \"ETN\", \"ETV\"])\n",
+    "old_END_DATE = old_tickers_v4['end_date'].max()\n",
+    "old_IDs = list(old_tickers_v4['ID'])"
    ]
   },
   {
@@ -143,31 +152,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tickers = get_tickers(v=3)\n",
-    "tickers = tickers[tickers[\"type\"].isin([\"CS\", \"ADRC\", \"ETF\", \"ETN\", \"ETV\"])]\n",
-    "tickers.reset_index(inplace=True, drop=True)\n",
-    "counter = 0\n",
-    "for index, row in tickers.iterrows():\n",
-    "    if index < 1600:\n",
-    "        continue\n",
+    "tickers_v3 = get_tickers(v=3, types=[\"CS\", \"ADRC\", \"ETF\", \"ETN\", \"ETV\"])\n",
+    "\n",
+    "for index, row in tickers_v3.iterrows():\n",
     "    id = row[\"ID\"]\n",
     "    ticker = row[\"ticker\"]\n",
     "    start_date = row[\"start_date\"]\n",
     "    end_date = row[\"end_date\"]\n",
     "\n",
-    "    if id in old_IDs and end_date > old_end_date:\n",
-    "        update = download_m1_raw_data(ticker = ticker, from_ = old_end_date + timedelta(days=1), to = end_date, columns = [\"open\", \"high\", \"low\", \"close\", \"volume\"], path = None, client=client)\n",
+    "    if id in old_IDs and end_date > old_END_DATE:\n",
+    "        update = download_m1_raw_data(ticker = ticker, from_ = old_END_DATE + timedelta(days=1), to = end_date, columns = [\"open\", \"high\", \"low\", \"close\", \"volume\"], client=client)\n",
     "        if update is not None:\n",
-    "            try:\n",
-    "                write(DATA_PATH + f\"raw/m1/{id}.parquet\", update, append=True)\n",
-    "                print(f'Updating {id}')\n",
-    "            except Exception:\n",
-    "                m1 = download_m1_raw_data(ticker = ticker, from_ = row[\"start_date\"], to = end_date, columns = [\"open\", \"high\", \"low\", \"close\", \"volume\"], client=client)\n",
-    "                m1.to_parquet(DATA_PATH + f\"raw/m1/{id}.parquet\", engine=\"fastparquet\", compression=\"snappy\", row_group_offsets=25000)\n",
-    "                print(f'Downloading {id}')\n",
+    "            write(DATA_PATH + f\"raw/m1/{id}.parquet\", update, append=True)\n",
+    "            print(f'Updating {id}')\n",
     "\n",
-    "    elif id not in old_IDs:\n",
-    "        download_m1_raw_data(ticker = ticker, from_ = row[\"start_date\"], to = end_date, columns = [\"open\", \"high\", \"low\", \"close\", \"volume\"], path = DATA_PATH + f\"raw/m1/{id}.parquet\", client=client)\n",
+    "    elif id not in old_IDs and start_date > old_END_DATE:\n",
+    "        data = download_m1_raw_data(ticker = ticker, from_ = row[\"start_date\"], to = end_date, columns = [\"open\", \"high\", \"low\", \"close\", \"volume\"], client=client)\n",
+    "        data.to_parquet(DATA_PATH + f\"raw/m1/{id}.parquet\", engine=\"fastparquet\", compression=\"snappy\", row_group_offsets=25000)\n",
     "        print(f'Downloading {id}')"
    ]
   }
