--- a/08_renamings.ipynb
+++ b/08_renamings.ipynb
@@ -14,51 +14,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "from tickers import get_tickers, get_ticker_changes\n",
-    "from times import get_market_dates, get_market_calendar\n",
+    "from times import get_market_dates, get_market_calendar, last_trading_date_before\n",
     "from datetime import datetime, date, time\n",
     "import pandas as pd\n",
+    "import shutil\n",
     "import os\n",
     "DATA_PATH = \"../data/polygon/\"\n",
-    "END_DATE = date(2024, 3, 1)"
+    "END_DATE = last_trading_date_before(date(2024, 4, 15))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# This can be done once and then updates can be done with manually appending the list of ticker changes.\n",
+    "# ###\n",
+    "# # Aggregate the csv's\n",
+    "# all_ticker_changes = []\n",
+    "# for file in os.listdir(DATA_PATH + \"../stockanalysis/raw/ticker_changes/\"):\n",
+    "#     ticker_changes_year = pd.read_csv(DATA_PATH + \"../stockanalysis/raw/ticker_changes/\" + file, \\\n",
+    "#         parse_dates=True, index_col=0, usecols=[\"Date\", \"Old\", \"New\"])\n",
+    "#     all_ticker_changes.append(ticker_changes_year)\n",
+    "\n",
+    "# ticker_changes = pd.concat(all_ticker_changes)\n",
+    "# ticker_changes = pd.concat(all_ticker_changes)\n",
+    "# ticker_changes.rename(columns={\"Old\": \"from\", \n",
+    "#                                \"New\": \"to\"}, inplace=True)\n",
+    "# ticker_changes.index.names = ['date']\n",
+    "# ticker_changes.sort_index(inplace=True)\n",
+    "# ticker_changes.to_csv(DATA_PATH + \"../stockanalysis/ticker_changes.csv\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "###\n",
-    "# Aggregate the csv's\n",
-    "all_ticker_changes = []\n",
-    "for file in os.listdir(DATA_PATH + \"../stockanalysis/raw/ticker_changes/\"):\n",
-    "    ticker_changes_year = pd.read_csv(DATA_PATH + \"../stockanalysis/raw/ticker_changes/\" + file, parse_dates=True, index_col=0, usecols=[\"Date\", \"Old\", \"New\"])\n",
-    "    all_ticker_changes.append(ticker_changes_year)\n",
-    "\n",
-    "ticker_changes = pd.concat(all_ticker_changes)\n",
-    "ticker_changes = pd.concat(all_ticker_changes)\n",
-    "ticker_changes.rename(columns={\"Old\": \"from\", \n",
-    "                               \"New\": \"to\"}, inplace=True)\n",
-    "ticker_changes.index.names = ['date']\n",
-    "ticker_changes.sort_index(inplace=True)\n",
-    "ticker_changes.to_csv(DATA_PATH + \"../stockanalysis/ticker_changes.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4347\n"
+      "4485\n"
      ]
     },
     {
@@ -103,7 +106,7 @@
        "4013  2022-06-09   FB  META"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -135,24 +138,28 @@
     "            * All other rows will be merged such as \"start_date\". For identifiers such as FIGI we will take the last available value. For the ID we will keep the original. If we do not do this, we might run into problems with identical IDs.\n",
     "            * The row of the old ticker will be deleted\n",
     "            * **We need to restart the loop!** If we don't the following can happen: Let's assume that a ticker was renamed from A -> B -> C -> D but that the order in which it appears in our ticker list is C, D, A, B. Using our loop, C gets merged with D. Then the loop checks D, which has no renamings. Then A gets merged with B. Then B gets merged with C, however that is incorrect! B should be merged with the new D, which contains C. Any double+ renamings have the risk of being in the 'wrong order'.\n",
+    "                * For this to work, the ticker list must be sorted on end_date.\n",
     "            * Of course we must not forget that there can be adjustments on day 1 of the ticker change. There should be laws to prohibit this.\n",
     "\n",
-    "Note: if a ticker A goes OTC and then comes back and changes to B, then we will have two files: one of the A before OTC and the A+B after OTC named B."
+    "Note: if a ticker A goes OTC and then comes back and changes to B, then we will have two files: one of the A before OTC and the A+B after OTC named B. This is as intended."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "tickers_v4 = get_tickers(v=4)\n",
+    "# QUICK BUG FIX, NEED TO REWRITE CODE TO MAKE IT CHRONIGICAL\n",
     "market_dates = get_market_dates()\n",
     "ticker_changes = get_ticker_changes()\n",
     "\n",
     "tickers_v4.insert(loc = 2, column = 'tickers_old', value = [[] for _ in range(len(tickers_v4))])\n",
     "\n",
     "while True:\n",
+    "    tickers_v4 = tickers_v4.sort_values(by='end_data').reset_index(drop=True)\n",
+    "\n",
     "    # tickers_v4 gets smaller by 1 element every time we run this loop.\n",
     "    for index_from, row_from in tickers_v4.copy().iterrows():\n",
     "        # Get values\n",
@@ -193,6 +200,16 @@
     "        from_ = pd.read_parquet(DATA_PATH + f\"processed/m1/{id_from}.parquet\")\n",
     "        to = pd.read_parquet(DATA_PATH + f\"processed/m1/{id_to}.parquet\")\n",
     "\n",
+    "        # When a ticker changes, the adjustments carry over the the old ticker.\n",
+    "            # Get market close minute to calculate the adjustment factor, and adjust 'to'.\n",
+    "            # (Adjustment factor is the same throughout the day, so market close is arbitrarely chosen)\n",
+    "        calendar = get_market_calendar('datetime')\n",
+    "        start_data_to_dt = calendar.loc[start_data_to, 'regular_close']\n",
+    "        start_data_to_dt_bar = to.loc[start_data_to_dt]\n",
+    "        adjustment_factor = start_data_to_dt_bar['close'] / start_data_to_dt_bar['close_original']\n",
+    "        from_[['open', 'high', 'low', 'close']] = from_[['open', 'high', 'low', 'close']].multiply(adjustment_factor)\n",
+    "        from_ = round(from_, 4)\n",
+    "\n",
     "        # Because companies like to be annoying, a split/dividend can take place at the same time as a ticker change. We have to account for this. An example is TYDE -> OCTO with a 50:1 reverse split. However this is much easier than 5_process_raw_data.ipynb, because there is at most a single split. This is rare, but there are still a handful of cases.\n",
     "        if os.path.isfile(DATA_PATH + f\"raw/adjustments/{ticker_to}.csv\"):\n",
     "            adjustments = pd.read_csv(DATA_PATH + f\"raw/adjustments/{ticker_to}.csv\", parse_dates=True, index_col=0)\n",
@@ -206,7 +223,7 @@
     "\n",
     "                from_[['open', 'high', 'low', 'close']] = from_[['open', 'high', 'low', 'close']].multiply(split_amount)\n",
     "\n",
-    "            # DIVIDEND ADJUSTMENT - REUN is the only case, not clear what happened there.\n",
+    "            # DIVIDEND ADJUSTMENT - REUN is the only case, not clear what happened there, likely a 'special dividend'\n",
     "            dividend = adjustments[adjustments.type == 'DIV']\n",
     "            if len(dividend) > 0:\n",
     "                print(ticker_to)\n",
@@ -223,50 +240,51 @@
     "                adjustment_factor = 1 - dividend_amount/cum_div_close\n",
     "\n",
     "                from_[['open', 'high', 'low', 'close']] = from_[['open', 'high', 'low', 'close']].multiply(adjustment_factor)\n",
-    "                from_ = round(from_, 4)\n",
-    "                from_['turnover'] = from_['turnover'].astype(int)\n",
     "            \n",
     "            # ROUNDING\n",
     "            if len(split) > 0 or len(dividend) > 0:\n",
     "                from_ = round(from_, 4)\n",
     "                from_['turnover'] = from_['turnover'].astype(int)\n",
     "\n",
-    "        # If on the old ticker, there are divs/splits on start_data_to (start of new ticker), then something is wrong.\n",
-    "        if os.path.isfile(DATA_PATH + f\"raw/adjustments/{ticker_from}.csv\"):\n",
-    "            adjustments = pd.read_csv(DATA_PATH + f\"raw/adjustments/{ticker_from}.csv\", parse_dates=True, index_col=0)\n",
-    "            adjustments.index = pd.to_datetime(adjustments.index).date\n",
-    "            adjustments = adjustments[(adjustments.index == start_data_to)]\n",
-    "            assert len(adjustments) == 0\n",
+    "        # # If on the old ticker, there are divs/splits on start_data_to (start of new ticker), then something is wrong.\n",
+    "        # if os.path.isfile(DATA_PATH + f\"raw/adjustments/{ticker_from}.csv\"):\n",
+    "        #     adjustments = pd.read_csv(DATA_PATH + f\"raw/adjustments/{ticker_from}.csv\", parse_dates=True, index_col=0)\n",
+    "        #     adjustments.index = pd.to_datetime(adjustments.index).date\n",
+    "        #     adjustments = adjustments[(adjustments.index == start_data_to)]\n",
+    "        #     assert len(adjustments) == 0\n",
+    "\n",
+    "        # Remove the 'from' ticker, then paste the 'from' and 'to' ticker to m1_renamed for debugging purposes.\n",
+    "        _ = shutil.move(DATA_PATH + f'processed/m1/{id_from}.parquet', DATA_PATH + f'processed/m1_renamed/{id_from}.parquet')\n",
+    "        _ = shutil.copyfile(DATA_PATH + f'processed/m1/{id_to}.parquet', DATA_PATH + f'processed/m1_renamed/{id_to}.parquet')\n",
     "\n",
     "        pd.concat([from_, to]).to_parquet(DATA_PATH + f\"processed/m1/{id_to}.parquet\", engine=\"fastparquet\", row_group_offsets=25000)\n",
-    "        # pd.concat([from_, to]).to_parquet(DATA_PATH + f\"processed/m1/{new_id}.parquet\", engine=\"pyarrow\", compression = 'brotli', row_group_size = 25000)\n",
     "\n",
-    "        # Delete old ticker from ticker list. You can also remove the files, but that is not necessary. In backtesting you will always loop over the ticker list and not over de files in the folder.\n",
-    "        #os.remove(path = DATA_PATH + f\"processed/m1/{id_from}.parquet\") # Removal of old renamed ticker (not necessary)\n",
     "        tickers_v4.drop(index_from, inplace=True)\n",
     "        tickers_v4.reset_index(inplace=True, drop=True)\n",
     "        \n",
-    "        # print(f\"Ticker change {ticker_from} -> {ticker_to} on {start_data_to} has been processed\")\n",
-    "        # print(f\"{index_from/len(tickers_v4)*100:.1f}% | Length of tickers_v4 is {len(tickers_v4)}\")\n",
+    "        print(f\"Ticker change {ticker_from} -> {ticker_to} on {start_data_to} has been processed\")\n",
+    "        print(f\"{index_from/len(tickers_v4)*100:.1f}% | Length of tickers_v4 is {len(tickers_v4)}\")\n",
     "        break\n",
-    "    \n",
+    "\n",
     "    # If we have reached the end of the loop, it means we have processed everything. Then we can stop.\n",
     "    if index_from >= (len(tickers_v4)-1):\n",
     "        break\n",
+    "    \n",
+    "tickers_v4 = tickers_v4.sort_values(by='ID').reset_index(drop=True)\n",
     "\n",
-    "# tickers_v4.to_csv(\"../data/tickers_v5.csv\")"
+    "tickers_v4.to_csv(\"../data/tickers_v5.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "738\n"
+      "827\n"
      ]
     },
     {
@@ -306,16 +324,16 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>4426</th>\n",
+       "      <th>4344</th>\n",
        "      <td>META-2022-06-09</td>\n",
        "      <td>META</td>\n",
        "      <td>[['2022-06-09', 'FB']]</td>\n",
        "      <td>Meta Platforms, Inc. Class A Common Stock</td>\n",
        "      <td>True</td>\n",
        "      <td>2019-06-03</td>\n",
-       "      <td>2024-03-01</td>\n",
+       "      <td>2024-04-15</td>\n",
        "      <td>2019-06-03</td>\n",
-       "      <td>2024-03-01</td>\n",
+       "      <td>2024-04-15</td>\n",
        "      <td>CS</td>\n",
        "      <td>1326801.0</td>\n",
        "      <td>BBG000MM2P62</td>\n",
@@ -326,16 +344,16 @@
       ],
       "text/plain": [
        "                   ID ticker             tickers_old  \\\n",
-       "4426  META-2022-06-09   META  [['2022-06-09', 'FB']]   \n",
+       "4344  META-2022-06-09   META  [['2022-06-09', 'FB']]   \n",
        "\n",
        "                                           name  active  start_date  \\\n",
-       "4426  Meta Platforms, Inc. Class A Common Stock    True  2019-06-03   \n",
+       "4344  Meta Platforms, Inc. Class A Common Stock    True  2019-06-03   \n",
        "\n",
        "        end_date  start_data    end_data type        cik composite_figi  \n",
-       "4426  2024-03-01  2019-06-03  2024-03-01   CS  1326801.0   BBG000MM2P62  "
+       "4344  2024-04-15  2019-06-03  2024-04-15   CS  1326801.0   BBG000MM2P62  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -356,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -403,31 +421,31 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2411</th>\n",
+       "      <th>2366</th>\n",
        "      <td>ERNA-2022-10-17</td>\n",
        "      <td>ERNA</td>\n",
        "      <td>[['2022-10-17', 'BTX'], ['2021-03-26', 'NTN']]</td>\n",
        "      <td>Eterna Therapeutics Inc. Common Stock</td>\n",
        "      <td>True</td>\n",
        "      <td>2019-06-03</td>\n",
-       "      <td>2024-03-01</td>\n",
+       "      <td>2024-04-15</td>\n",
        "      <td>2019-06-03</td>\n",
-       "      <td>2024-03-01</td>\n",
+       "      <td>2024-04-15</td>\n",
        "      <td>CS</td>\n",
        "      <td>748592.0</td>\n",
        "      <td>BBG000CX5677</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2751</th>\n",
+       "      <th>2692</th>\n",
        "      <td>FRGT-2022-05-27</td>\n",
        "      <td>FRGT</td>\n",
        "      <td>[['2022-05-27', 'HUSN'], ['2020-05-08', 'CIFS']]</td>\n",
        "      <td>Freight Technologies, Inc. Ordinary Shares</td>\n",
        "      <td>True</td>\n",
        "      <td>2019-06-03</td>\n",
-       "      <td>2024-03-01</td>\n",
+       "      <td>2024-04-15</td>\n",
        "      <td>2019-06-03</td>\n",
-       "      <td>2024-03-01</td>\n",
+       "      <td>2024-04-15</td>\n",
        "      <td>CS</td>\n",
        "      <td>1687542.0</td>\n",
        "      <td></td>\n",
@@ -438,23 +456,23 @@
       ],
       "text/plain": [
        "                   ID ticker  \\\n",
-       "2411  ERNA-2022-10-17   ERNA   \n",
-       "2751  FRGT-2022-05-27   FRGT   \n",
+       "2366  ERNA-2022-10-17   ERNA   \n",
+       "2692  FRGT-2022-05-27   FRGT   \n",
        "\n",
        "                                           tickers_old  \\\n",
-       "2411    [['2022-10-17', 'BTX'], ['2021-03-26', 'NTN']]   \n",
-       "2751  [['2022-05-27', 'HUSN'], ['2020-05-08', 'CIFS']]   \n",
+       "2366    [['2022-10-17', 'BTX'], ['2021-03-26', 'NTN']]   \n",
+       "2692  [['2022-05-27', 'HUSN'], ['2020-05-08', 'CIFS']]   \n",
        "\n",
        "                                            name  active  start_date  \\\n",
-       "2411       Eterna Therapeutics Inc. Common Stock    True  2019-06-03   \n",
-       "2751  Freight Technologies, Inc. Ordinary Shares    True  2019-06-03   \n",
+       "2366       Eterna Therapeutics Inc. Common Stock    True  2019-06-03   \n",
+       "2692  Freight Technologies, Inc. Ordinary Shares    True  2019-06-03   \n",
        "\n",
        "        end_date  start_data    end_data type        cik composite_figi  \n",
-       "2411  2024-03-01  2019-06-03  2024-03-01   CS   748592.0   BBG000CX5677  \n",
-       "2751  2024-03-01  2019-06-03  2024-03-01   CS  1687542.0                 "
+       "2366  2024-04-15  2019-06-03  2024-04-15   CS   748592.0   BBG000CX5677  \n",
+       "2692  2024-04-15  2019-06-03  2024-04-15   CS  1687542.0                 "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
